# slack-progressing

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ask.md  bug_report.md  feature_request.md
example/: example.py
slack_progressing/: __init__.py  progress_bar.py  slack.py  slack_progressing.py
tests/: test_slack_progressing.py
